Add css rules for mobile nav footer and resize footer icons

--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -46,16 +46,19 @@ variables:
           </ul>
         </div>
         <div class="mt-auto">
-          <p>
-            <span>Get in Touch</span>
-            <a href="#">info@example.com</a>
-          </p>
-          <a class="mr-2" href="#">
-            {% svg images/logo-twitter.svg width=48 %}
+          <div class="mobile-nav-footer">
+            <p>
+              <span>Get in Touch</span>
+              <a href="#">info@example.com</a>
+            </p>
+          <div class="break"></div>
+            <a class="mr-2" href="#">
+              {% svg images/logo-twitter.svg width=36 %}
+              </a>
+            <a class="mr-2" href="#">
+              {% svg images/logo-github.svg width=36 %}
             </a>
-          <a class="mr-2" href="#">
-            {% svg images/logo-github.svg width=48 %}
-            </a>
+          </div>
         </div>
       </div>
     </nav>
