--- a/assets/styles/_custom-styles.scss
+++ b/assets/styles/_custom-styles.scss
@@ -2,3 +2,14 @@
   padding: 0.325em 0.5em;
   border-radius: 12px;
 }
+
+.break {
+  flex-basis: 100%;
+  height: 0;
+}
+
+.mobile-nav-footer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
