Use bootstrap flex classes to center mobile nav footer items

--- a/src/_components/navbar.liquid
+++ b/src/_components/navbar.liquid
@@ -46,7 +46,7 @@ variables:
           </ul>
         </div>
         <div class="mt-auto">
-          <div class="mobile-nav-footer">
+          <div class="d-flex flex-wrap justify-content-center">
             <p>
               <span>Get in Touch</span>
               <a href="#">info@example.com</a>
